@@ -1,5 +1,5 @@
 TinyMUX 2.7:  CHANGES
-Last Update:  October 2007
+Last Update:  November 2007
 
 Major changes that may affect performance and require softcode tweaks:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -94,6 +94,12 @@ Feature Additions:
  -- Add ShutdownSlave method to ISlaveControl.
  -- Add sqlslave and sqlproxy modules for AsyncSQL.
  -- Add chanobj() per issue 401.
+ -- Add function_name configuration option to rename hardcoded
+    functions.
+ -- Add @hook/args to allow arguments to be hooked.
+ -- Extend %=<> subtitution to take integer values which allow
+    softcode access to all 100 arguments.
+ -- Add %+ substitution to return number of arguments.
 
 
 Bug Fixes:
@@ -160,7 +166,7 @@ Bug Fixes:
  -- ConvertToUTF8() converted code points above 0x10000 incorrectly.
  -- Allow %=<name> to support single-letter attribute names and
     document. Issue 341.
- -- Fixed escape() which used #92 instead of backslash (Issue 353).
+ -- Fix escape() which used #92 instead of backslash (Issue 353).
  -- Fix WIDTH() to default to 78 instead of 24 (Issue 354).
  -- Open permissions on WIDTH() and HEIGHT() (Issue 356).
  -- Fix special characters in names with @decompile (Issue 292).
@@ -189,6 +195,7 @@ Bug Fixes:
  -- Pass reality level descriptions through @descformat (Issue 59).
  -- Fix regression (r1355) which allowed an endless loop (Issue 403).
  -- Fix buffer overflow with %=<> substitution (Issue 406).
+ -- Fix TR() to support UTF-8 sequences (Issue 305).
 
 
 Performanc  Enhancements:
